<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activities.AboutActivity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/menu_label_about_us"
        android:textColor="@color/onBackground"
        app:layout_constraintBottom_toBottomOf="@+id/about_activity_imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/about_activity_imageBack" />

    <ImageView
        android:contentDescription="@string/cd_back_button"
        android:paddingVertical="8dp"
        android:paddingEnd="4dp"
        android:id="@+id/about_activity_imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:tint="@color/onBackground"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:contentDescription="@string/cd_app_logo"
        android:id="@+id/imageView6"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_activity_imageBack"
        app:srcCompat="@drawable/ic_symbol__svg_" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="0.1dp"
        android:text="@string/label_about_us_message"
        android:textColor="@color/onBackground"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/about_activity_txtRateOurApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/label_rate_our_app"
        android:textColor="@color/companyColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/about_activity_txtPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_privacy_policy"
        android:textColor="@color/companyColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/about_activity_txtRateOurApp"
        app:layout_constraintTop_toBottomOf="@+id/about_activity_txtRateOurApp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/about_activity_btnContactUs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_company_button"
        android:shadowColor="@color/backgroundColor"
        android:text="@string/label_contact_us"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/onBackground"
        android:textSize="16sp"
        app:elevation="0dp"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>