<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded_dialog"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/dialog_save_palette_txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/label_cancel"
        android:textColor="@color/onBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_save_palette_txtAddName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/label_add_name"
        android:textColor="@color/onBackground"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/dialog_save_palette_txtCancel"
        app:layout_constraintTop_toBottomOf="@+id/dialog_save_palette_txtCancel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_save_palette_inputLayoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/onBackground"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:hintTextColor="@color/onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialog_save_palette_txtAddName"
        app:layout_constraintTop_toBottomOf="@+id/dialog_save_palette_txtAddName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_save_palette_editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_palette_name"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dialog_save_palette_btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/label_save"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_save_palette_inputLayoutName" />


</androidx.constraintlayout.widget.ConstraintLayout>